# dharpa-toolbox

./: .cruft.json  .envrc  .envrc.bak  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-linux.yaml  build-mac-osx.yaml
ci/docker/: Dockerfile
ci/docs/: __init__.py
ci/gitlab/release/: binaries.yml  container.yml
ci/gitlab/test/: commitlint.yml  coverage.yml  flake8.yml  mypy.yml  tox.yml
dev/: corpus_processing.ipynb  corpus_processing.json  dev.ipynb  example_corpus_processing.ipynb  example_input_file_processing.ipynb  example_input_file_processing_2.ipynb  sub_workflow.ipynb  text_corpus_1.txt  topic_modelling_dummy.ipynb  types.ipynb  ui.ipynb  workflow_api.py  xor.ipynb
dev/workflows/: corpus_processing.yaml  input_file_processing.yaml
docs/: install.md  usage.md
examples/: README.md  environment.yml  example_corpus_processing.ipynb  example_input_file_processing.ipynb  example_input_file_processing_2.ipynb  inputs_topic_modelling_1.json  workflow-modularity.ipynb  workflow_api.py
examples/data/: stopwords.csv  text_corpus_2.txt
src/dharpa/: __init__.py  defaults.py  models.py  utils.py  version.txt
src/dharpa/data/: core.py  inputs.py
src/dharpa/graphs/utils/: __init__.py
src/dharpa/interfaces/cli/: __init__.py
src/dharpa/processing/: executors.py  processing_module.py
src/dharpa/processing/core/: dummy.py  logic_gates.py
src/dharpa/resources/workflows/dummy/: single_module.json  topic_modelling.json
src/dharpa/resources/workflows/logic_gates/: nand.json  nor.json  xor.json
src/dharpa/workflows/: events.py  modules.py  structure.py  utils.py  workflow.py
src/dharpa_toolbox/: __init__.py  _meta.py  _nbdev.py  defaults.py  ui.py  utils.py
src/dharpa_toolbox/interfaces/cli/: __init__.py
src/dharpa_toolbox/modules/: core.py  files.py  old.py  text.py  utils.py  workflows.py
src/dharpa_toolbox/rendering/: plain.py  vue.py
src/dharpa_toolbox/rendering/cli/: __init__.py
src/dharpa_toolbox/rendering/jupyter/: item_widgets.py  module_widgets.py  renderer.py  utils.py
src/dharpa_toolbox/rendering/rest_api/: __init__.py
src/dharpa_toolbox/types/: utils.py
src/dharpa_toolbox/widgets/: item_widgets.py  module_widgets.py
tests/: conftest.py  test_dharpa_toolbox.py
tests/workflows/: logic_1.yaml  logic_2.yaml  logic_3.yaml
